fix overflow, new information brochure

--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   margin-bottom: -10px;
+  overflow-x: hidden;
 }
 .main {
   min-height: 50vh;
